# aiohttp_boilerplate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
aiohttp_boilerplate/: __init__.py  aiohttp_boilerplate
aiohttp_boilerplate/auth/: __init__.py
aiohttp_boilerplate/bootstrap/: __init__.py  web_app.py
aiohttp_boilerplate/config/: __init__.py
aiohttp_boilerplate/dbpool/: dummy.py  pg.py  tests.py
aiohttp_boilerplate/log/: __init__.py
aiohttp_boilerplate/logging/: __init__.py  access_log.py  formatter.py  formatters.py  gcp_logger.py  helpers.py  logger.conf  logging-gcp.json  main.py  readme.md
aiohttp_boilerplate/middleware/: defaults.py  logger_to_request.py  x_request_id.py
aiohttp_boilerplate/models/: __init__.py
aiohttp_boilerplate/schemas/: fields.py  validators.py
aiohttp_boilerplate/sql/: __init__.py  exceptions.py  tests.py
aiohttp_boilerplate/test_utils/: e2e.py  load_fixtures.py  unit.py
aiohttp_boilerplate/tests/: __init__.py  e2e.py  test_load_fixtures.py
aiohttp_boilerplate/views/: __init__.py  create.py  exceptions.py  (+7 more)
auth/: __init__.py
bootstrap/: __init__.py  console.py  console_app.py  tests.py  web_app.py
config/: __init__.py
dbpool/: __init__.py  dummy.py  pg.py  tests.py
log/: helpers.py
middleware/: defaults.py
models/: __init__.py
schemas/: fields.py
sql/: __init__.py  consts.py
tests/: __init__.py  load_fixtures.py  unit.py
views/: __init__.py  create.py  exceptions.py  list.py  options.py  retrieve.py  update.py
(+9 files in other folders)
