[tool.poetry]
name = "aiohttp-boilerplate"
version = "0.2.4"
description = ""
authors = ["Vladyslav Tarasenko <vladka@webdevelop.pro>", "Artem Tiumentcev <artem@webdevelop.pro>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
aiohttp = "3.6.2"
asyncpg = "0.20.1"
marshmallow = "2.19.5"
ujson = "1.35"
uvloop = "0.14.0"
PyJWT = "1.7.1"
aiocache = "0.11.1"
python-json-logger = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
