[tool.poetry]
name = "aiohttp-boilerplate"
version = "0.2.5"
description = ""
authors = ["Vladyslav Tarasenko <vladka@webdevelop.pro>", "Artem Tiumentcev <artem@webdevelop.pro>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = "3.8.3"
asyncpg = "0.24.0"
marshmallow = "2.21.0"
uvloo = "0.16.0"
ujson = "5.4.0"
PyJWT = "2.4.0"
aiocache = "0.11.1"
python-json-logger = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
